# Minimalist-agent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: index.html  package.json  vite.config.ts
docs/: minimalist-agent-mvp.md
docs/adr/: 0001-single-workspace-mvp.md  0002-ag-ui-sse-agent-event-protocol.md  0003-openai-agents-sdk-runtime.md  0004-local-accounts-before-enterprise-sso.md  0005-admin-approval-for-local-registration.md  0006-custom-product-ui-over-ant-design.md  0007-reference-backend-middleware-stack.md  0008-per-agent-capability-policy.md  0009-agent-tool-gateway.md  0010-process-summary-without-hidden-chain-of-thought.md  0011-admin-visible-full-trace.md  0012-full-trace-retention.md  0013-artifact-storage-by-reference.md  0014-artifact-preview-types.md  0015-card-schema-registry.md  0016-openai-agents-sdk-sandbox.md  0017-search-capability-with-doubao-default.md  0018-separate-search-and-page-read-capabilities.md  0019-page-read-capability-with-jina-reader-default.md  0020-model-provider-catalog-and-custom-endpoints.md  0021-initial-model-provider-catalog.md  0022-manual-mcp-server-registration.md  0023-remote-mcp-connection-types.md  0024-conversation-list-before-projects.md  0025-user-model-selection-within-agent-policy.md  0027-run-attachments.md  (+13 more)
infra/: docker-compose.yml
scripts/: check-env.sh  dev-all.sh  dev-api.sh  dev-web.sh  dev-worker.sh
tests/: test_documentation_contract.py  test_scaffold_contract.py
(+53 files in other folders)
