[project]
name = "minimalist-agent"
version = "0.1.0"
description = "Minimal agent platform MVP"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.17.0",
  "celery[redis]>=5.6.0",
  "fastapi[standard]>=0.124.0",
  "httpx>=0.28.0",
  "minio>=7.2.0",
  "openai-agents>=0.6.0",
  "pydantic>=2.12.0",
  "pymysql>=1.1.0",
  "python-dotenv>=1.2.0",
  "redis>5.0.2,<6.5",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "apps/api/tests",
  "apps/worker/tests",
  "tests",
]
pythonpath = [
  ".",
]

[tool.uv]
package = false
